fix date horizontal alignment in event page

--- a/assets/sass/styles/hero.sass
+++ b/assets/sass/styles/hero.sass
@@ -39,6 +39,10 @@
                     position: absolute
                     bottom: calc(#{-$spacing-7} + #{$spacing-4})
                     transform: translateY(-100%)
+        .event-access
+            .event-time-slot 
+                .date
+                    width: columns(3)
 @include media-breakpoint-down(desktop)
     .events__page
         .hero-actions
